--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,7 +2,6 @@
   font-family: Arial, Helvetica, sans-serif;
   border: 1px solid #dadde1;
   padding: 16px;
-  margin: 30px;
   border-radius: 4px;
   color: rgb(135, 135, 135);
 }
@@ -10,6 +9,7 @@
 .Weather h1 {
   font-size: 24px;
   font-weight: 100;
+  margin: 20px 0 0 0;
   line-height: 29px;
 }
 
@@ -23,4 +23,29 @@
   font-weight: 100;
   line-height: 19px;
   list-style: none;
+}
+
+.Weather img {
+  height: 64px;
+  width: 64px;
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.Weather .temperature {
+  font-weight: bold;
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 64px;
+  font-weight: 400;
+}
+
+.Weather .unit {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top: -34px;
+  margin-left: 5px;
 }
