Updated bg color

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,4 +1,5 @@
 .Weather {
+  background-color: #fffde0;
   font-family: Arial, Helvetica, sans-serif;
   border: 1px solid #dadde1;
   padding: 16px;
